update beam notebook

--- a/notebooks/beam/portability_wordcount_python.ipynb
+++ b/notebooks/beam/portability_wordcount_python.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Apache Beam Portability Framework WordCount example\n",
     "\n",
-    "This notebook demonstrates how to run the Beam [wordcount.py](https://github.com/apache/beam/blob/v2.14.0/sdks/python/apache_beam/examples/wordcount.py) in Hopsworks.\n"
+    "This notebook demonstrates how to run the Beam [wordcount.py](https://github.com/apache/beam/blob/v2.19.0/sdks/python/apache_beam/examples/wordcount.py) in Hopsworks.\n"
    ]
   },
   {
@@ -18,9 +18,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'jobserver_log': 'beamjobserver-flinking-runner-52504.log',\n",
+       " 'artifact_port': 14861,\n",
+       " 'expansion_port': 53886,\n",
+       " 'job_host': 'hopsworks0.logicalclocks.com',\n",
+       " 'job_port': 52504,\n",
+       " 'jobserver.pid': 24971}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from __future__ import absolute_import\n",
     "\n",
@@ -57,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,9 +91,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:apache_beam.runners.interactive.interactive_environment:Dependencies required for Interactive Beam PCollection visualization are not available, please use: `pip install apache-beam[interactive]` to install necessary dependencies to enable all data visualization features.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "#\n",
     "# Licensed to the Apache Software Foundation (ASF) under one or more\n",
@@ -175,11 +206,18 @@
     "    \n",
     "print('Done')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python-p2__meb10000",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
