--- a/notebooks/ml/Parallel_Experiments/Maggy/maggy-fashion-mnist-example.ipynb
+++ b/notebooks/ml/Parallel_Experiments/Maggy/maggy-fashion-mnist-example.ipynb
@@ -336,7 +336,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python3"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
