add tf import to custom model for consistency

--- a/notebooks/ml/Parallel_Experiments/Maggy/maggy-ablation-titanic-example.ipynb
+++ b/notebooks/ml/Parallel_Experiments/Maggy/maggy-ablation-titanic-example.ipynb
@@ -370,6 +370,7 @@
    "outputs": [],
    "source": [
     "def my_custom_model():\n",
+    "    import tensorflow as tf\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
     "    model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
