[HOPSWORKS-1757] Update Maggy ablation example notebook with fix for TF pickling issue (#133)

--- a/notebooks/ml/Parallel_Experiments/Maggy/maggy-ablation-titanic-example.ipynb
+++ b/notebooks/ml/Parallel_Experiments/Maggy/maggy-ablation-titanic-example.ipynb
@@ -8,11 +8,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Last Updated: 2019/10/14*\n",
+    "*Last Updated: 2020/04/29* </br>\n",
+    "*Created: 2019/10/14*\n",
     "\n",
     "In this notebook, we demonstrate Maggy's Ablation API, while using a TensorFlow Keras Sequential model trained on the [Titanic Dataset](https://www.kaggle.com/c/titanic/data). To be able to follow along, make sure you have the Titanic training dataset registered on your Project's Feature Store, as explained [in this example notebook](https://github.com/logicalclocks/hops-examples/blob/master/notebooks/featurestore/datasets/TitanicTrainingDatasetPython.ipynb).\n",
     "\n",
@@ -28,7 +28,7 @@
     "\n",
     "We can think that an ablation study is an *experiment* that consists of several *trials*. For example, each model ablation trial involves training a model with one or more of its components (e.g. a layer) removed. Similarly, a feature ablation trial involves training a model using a different set of dataset features, and observing the outcomes.\n",
     "\n",
-    "![Figure: A sample feature ablation trial (up) and a sample model ablation trial (bottom).](../../images/ablation-feature-vs-model.png)\n",
+    "![image.png](images/ablation-feature-vs-model.png)\n",
     "\n",
     "The image above shows a sample feature ablation trial (up) and a sample layer ablation trial (down). For example, in the sample layer ablation trial, we remove the last hidden layer from the base model, train the resulting model, and observe its accuracy."
    ]
@@ -65,11 +65,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>5</td><td>application_1586184410703_0006</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1586184410703_0006/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1586184410703_0006_01_000001/maggy_dev__meb10000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
-    "import tensorflow as tf\n",
     "from hops import hdfs\n",
     "from hops import featurestore\n",
     "import maggy"
@@ -86,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,9 +165,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pclass\n",
+      "sibsp\n",
+      "fare"
+     ]
+    }
+   ],
    "source": [
     "ablation_study.features.list_all()"
    ]
@@ -176,13 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define the base model generator function\n",
     "\n",
     "def base_model_generator():\n",
+    "    import tensorflow as tf\n",
     "    model = tf.keras.Sequential()\n",
     "    model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
     "    model.add(tf.keras.layers.Dense(64, name='my_dense_two', activation='relu'))\n",
@@ -203,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,9 +271,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Included single layers are: \n",
+      "\n",
+      "my_dense_three\n",
+      "my_dense_sigmoid\n",
+      "my_dense_four\n",
+      "my_dense_two"
+     ]
+    }
+   ],
    "source": [
     "# see the included single layers\n",
     "\n",
@@ -255,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +328,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Included layer groups are: \n",
+      "\n",
+      "---- All layers prefixed \"my_dense\"\n",
+      "--- Layer group ['my_dense_four', 'my_dense_two']"
+     ]
+    }
+   ],
    "source": [
     "ablation_study.model.layers.print_all_groups()"
    ]
@@ -288,14 +350,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Just to recap, the ablator will generate one trial per each single layer and one trial per each layer group.\n",
+    "### Custom Models\n",
+    "\n",
+    "Sometimes our models are defined in a way that ablating them takes much more than removing individual layers or layer groups. Complex models developed using Keras' Functional API or with custom classes, such as [VGG-16](https://github.com/keras-team/keras-applications/blob/master/keras_applications/vgg16.py) or [Inception-v3](https://github.com/keras-team/keras-applications/blob/master/keras_applications/inception_v3.py), are examples of such models, and they may include skip connections, branches, and arbitrary topologies.\n",
+    "\n",
+    "You can still use Maggy for ablation studies of such complex models. To do that, you just have to - again - extract the model generation logic into a python callable, the same way you defined your base model generator, and include it in the study using `model.add_custom_model_generator()`. This method takes two arguments:\n",
+    "- `custom_model_generator`: a python callable that returns a model.\n",
+    "- `model_identifier`: a string to be used as an identifier for the custom model.\n",
+    "\n",
+    "In the following example we change the simple model that we defined earlier as our base model generator, and include it in our study. Note that adding each custom model leads to the addition of a single trial to our study.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_custom_model():\n",
+    "    import tensorflow as tf\n",
+    "    model = tf.keras.Sequential()\n",
+    "    model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dense(2, activation='sigmoid'))\n",
+    "    # output layer\n",
+    "    model.add(tf.keras.layers.Dense(1, activation='linear'))\n",
+    "    return model\n",
+    "\n",
+    "ablation_study.model.add_custom_model_generator(my_custom_model, 'a custom model')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just to recap, the ablator will generate one trial per each single layer and one trial per each layer group, and one trial for the custom model we defined above.\n",
     "\n",
     "Now the only thing you need to do is to wrap your training code in a Python function. You can name this function whatever you wish, but we will refer to it as the *training* or *wrapper* function. The `model_function` and `dataset_function` used in the code are generated by the ablator per each trial, and you should call them in your code. This is your everyday TensorFlow/Keras code:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,11 +429,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a92031ec4b40415fb8d6ce0337561f89",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, description='Maggy experiment', max=11.0, style=ProgressStyle(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started Maggy Experiment: Titanic-LOCO, application_1586184410703_0006, run 1\n",
+      "\n",
+      "------ LOCO Results ------ \n",
+      "BEST Config Excludes {\"ablated_feature\": \"None\", \"ablated_layer\": \"['my_dense_four', 'my_dense_two']\"} -- metric 0.7233333587646484\n",
+      "WORST Config Excludes {\"ablated_feature\": \"None\", \"ablated_layer\": \"Layers prefixed my_dense\"} -- metric 0.3866666555404663\n",
+      "AVERAGE metric -- 0.6309090906923468\n",
+      "Total Job Time 0 hours, 2 minutes, 36 seconds\n",
+      "\n",
+      "Finished Experiment\n"
+     ]
+    }
+   ],
    "source": [
     "# launch the experiment\n",
     "\n",
