--- a/notebooks/ml/tensorflow2/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
+++ b/notebooks/ml/tensorflow2/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
@@ -7,7 +7,7 @@
     "# MultiWorkerMirroredStrategy on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 2.2.0_rc2</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
@@ -279,18 +279,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
-   "language": "",
-   "name": "pysparkkernel"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
-    "version": 2
+    "name": "ipython",
+    "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python2"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
