--- a/notebooks/ml/tensorflow2/Distributed_Training/mirrored_strategy/multiworkermirroredstrategy_simulated_data_example.ipynb
+++ b/notebooks/ml/tensorflow2/Distributed_Training/mirrored_strategy/multiworkermirroredstrategy_simulated_data_example.ipynb
@@ -7,7 +7,7 @@
     "# MultiWorkerMirroredStrategy on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 2.2.0_rc2</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
@@ -80,61 +80,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1586507110993_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://gpu.c.dpe-cloud-mle.internal:8088/proxy/application_1586507110993_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://gpu.c.dpe-cloud-mle.internal:8042/node/containerlogs/container_e01_1586507110993_0003_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Experiments/application_1586279424915_0026_2', {'metric': [0.6996641755104065, 0.4375], 'log': 'Experiments/application_1586279424915_0026_2/output.log'})"
      ]
     }
    ],
    "source": [
-    "def mirrored_training():\n",
+    "def multi_worker_mirrored_training():\n",
     "\n",
     "    import sys\n",
+    "    \n",
     "    import numpy as np\n",
     "    import tensorflow as tf\n",
     "    \n",
     "    from hops import tensorboard\n",
     "    from hops import devices\n",
+    "\n",
     "    \n",
     "    # Define distribution strategy\n",
-    "    strategy = tf.distribute.MirroredStrategy()\n",
+    "    strategy = tf.distribute.experimental.MultiWorkerMirroredStrategy(communication=tf.distribute.experimental.CollectiveCommunication.NCCL)\n",
     "    \n",
-    "    # TODO (davit). this is copy from tf tutorial may be batch size 32?\n",
-    "    BATCH_SIZE_PER_REPLICA = 32\n",
-    "    BATCH_SIZE = BATCH_SIZE_PER_REPLICA * strategy.num_replicas_in_sync\n",
-    "\n",
+    "    epochs=30 \n",
+    "    steps_per_epoch=5\n",
+    "    validation_steps=2          \n",
+    "    \n",
+    "    batch_size_per_replica = 32\n",
+    "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
+    "    shuffle_size = batch_size * 4\n",
+    "    \n",
     "    def input_fn():\n",
     "      x = np.random.random((1024, 10))\n",
     "      y = np.random.randint(2, size=(1024, 1))\n",
     "      x = tf.cast(x, tf.float32)\n",
+    "    \n",
     "      dataset = tf.data.Dataset.from_tensor_slices((x, y))\n",
     "      dataset = dataset.repeat(500)\n",
     "      dataset = dataset.batch(BATCH_SIZE)\n",
+    "        \n",
     "      return dataset\n",
     "\n",
     "    model_dir = tensorboard.logdir()\n",
@@ -147,8 +137,6 @@
     "        model.add(tf.keras.layers.Dense(1, activation='sigmoid'))\n",
     "\n",
     "        # Compile the model.\n",
-    "        optimizer = tf.keras.optimizers.Adam(0.001) \n",
-    "        # Compile the model.\n",
     "        model.compile(loss=tf.keras.losses.BinaryCrossentropy(),\n",
     "                      optimizer=tf.keras.optimizers.Adam(),\n",
     "                      metrics=['accuracy']\n",
@@ -158,18 +146,28 @@
     "        tf.keras.callbacks.TensorBoard(log_dir=model_dir),\n",
     "        tf.keras.callbacks.ModelCheckpoint(filepath=model_dir),\n",
     "    ]\n",
+    "    \n",
     "    model.fit(input_fn(), \n",
-    "        verbose=0,\n",
-    "        epochs=3, \n",
-    "        steps_per_epoch=5,\n",
+    "        verbose=0, \n",
+    "        epochs=epochs, \n",
+    "        steps_per_epoch=steps_per_epoch,\n",
     "        validation_data=input_fn(),\n",
+    "        validation_steps=validation_steps,      \n",
     "        callbacks=callbacks\n",
     "    )\n",
-    "    return model.evaluate(input_fn())\n",
+    "    \n",
+    "    return model.evaluate(input_fn(), steps=1)\n",
     "\n",
     "from hops import experiment\n",
-    "experiment.mirrored(mirrored_training)"
+    "experiment.mirrored(multi_worker_mirrored_training)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -188,18 +186,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
-   "language": "",
-   "name": "pysparkkernel"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
-    "version": 2
+    "name": "ipython",
+    "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python2"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
