--- a/notebooks/ml/tensorflow2/Parallel_Experiments/grid_search/grid_search_fashion_mnist.ipynb
+++ b/notebooks/ml/tensorflow2/Parallel_Experiments/grid_search/grid_search_fashion_mnist.ipynb
@@ -7,7 +7,7 @@
     "# Getting started: Fashion Mnist on Hops Notebook\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 2.2.0_rc2</h3></font>"
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>"
    ]
   },
   {
